--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@
                 <a href="#" class="btn-more">Learn More</a>
         </div>
         <div class="transform-section-image">
-            <img src="/agency2/assets/image-transform copy.jpg" alt="Transform" width="100%">
+            <img src="./assets/image-transform copy.jpg" alt="Transform" width="100%">
     </div>
     </div>
     <!--STAND-OUT-->
     <div class="stand-out-section section">
         <div class="stand-out-image">
-            <img src="/agency2/assets/image-stand-out.jpg" alt="Stand Out" width="100%">
+            <img src="./assets/image-stand-out.jpg" alt="Stand Out" width="100%">
         </div>
         <div class="stand-out-section-child">
             <h2>Stand out to the right <br>audience</h2>
@@ -78,21 +78,21 @@
         <h3 class="testimonial-title">Clients Testimonials</h3>
         <div class="testimonial-container">
             <div class="testimonial">
-            <img src="/agency2/assets/image-emily.jpg" alt="emily">
+            <img src="./assets/image-emily.jpg" alt="emily">
             <p class="testimonial-description">We put our trust in Sunnyside and they <br>delivered, making sure our 
                 needs were met <br>and deadlines were always hit.</p>
                 <p class="author">Emily R.</p>
                 <P class="author-title">Marketing Director</P>
         </div>
         <div class="testimonial">
-            <img src="/agency2/assets/image-thomas.jpg" alt="Thomas">
+            <img src="./assets/image-thomas.jpg" alt="Thomas">
             <p class="testimonial-description">Sunnyside’s enthusiasm coupled with their <br>keen interest in our
                  brand’s success made it <br>a satisfying and enjoyable experience.</p>
                 <p class="author">Thomas S.</p>
                 <P class="author-title">Chief Operating Officer</P>
         </div>
         <div class="testimonial">
-            <img src="/agency2/assets/image-jennie.jpg" alt="Jennie">
+            <img src="./assets/image-jennie.jpg" alt="Jennie">
             <p class="testimonial-description">
                 Incredible end result! Our sales increased <br>over 400% when we worked with <br>Sunnyside. 
                 Highly recommended!</p>
@@ -103,16 +103,16 @@
     </div>
     <div class="bottom-images">
             <div class="image-wrapper">
-                <img src="/agency2/assets/image-gallery-milkbottles.jpg" alt="milk bottles" width="">
+                <img src="./assets/image-gallery-milkbottles.jpg" alt="milk bottles" width="">
             </div>
             <div class="image-wrapper">
-                <img src="/agency2/assets/image-gallery-orange.jpg" alt="orange" width="">
+                <img src="./assets/image-gallery-orange.jpg" alt="orange" width="">
             </div>
             <div class="image-wrapper">
-                <img src="/agency2/assets/image-gallery-cone.jpg" alt="cone" width="">
+                <img src="./assets/image-gallery-cone.jpg" alt="cone" width="">
             </div>
             <div class="image-wrapper">
-                <img src="/agency2/assets/image-gallery-sugarcubes.jpg" alt="sugar cubes" width="">
+                <img src="./assets/image-gallery-sugarcubes.jpg" alt="sugar cubes" width="">
         </div>
     </div>
 </main>
